feat: add function to procedd procss

--- a/model/Vasicek.ipynb
+++ b/model/Vasicek.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "0.9512436133209152"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "0.7797609496298229"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,14 +100,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
     "T = 10\n",
-    "timestep = 1\n",
+    "timestep = 1/12\n",
     "numgrid = (int)(T / timestep)\n",
-    "numpath = 5000"
+    "numpath = 10000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numgrid"
    ]
   },
   {
@@ -119,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,23 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 163,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(numgrid):\n",
-    "    evolved = (\n",
-    "        paths[:, i] + kappa * (theta - paths[:, i]) * timestep \n",
-    "        + volatility * np.sqrt(timestep) * np.random.normal(size = numpath)\n",
-    "    )\n",
-    "    paths = np.append(paths, evolved.reshape(numpath, -1), axis = 1)"
+    "    evolved = model.proceed(paths[:, i], timestep, np.random.normal(size = numpath))\n",
+    "    paths = np.append(paths, evolved.reshape(numpath, -1), axis = 1)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,18 +169,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = 9\n",
+    "t = 5\n",
     "nt = (int)(numgrid * t / T)\n",
     "path_on_t = paths[:, nt]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,44 +193,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9510861988229553"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DF(t,t,T) =  0.7811799485778099\n",
+      "ZeroRate 0.04938994955442982\n"
+     ]
     }
    ],
    "source": [
     "# simulated DF(t, t, T)\n",
-    "np.mean(dfs_t)"
+    "dfttT = np.mean(dfs_t)\n",
+    "print('DF(t,t,T) = ', dfttT)\n",
+    "print('ZeroRate', -np.log(dfttT) / (T-t))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9524490338636782"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DF(0,t,T) =  0.7827126408493633\n",
+      "ZeroRate 0.048997929597910786\n"
+     ]
     }
    ],
    "source": [
     "# Expectation DF(0, t, T)\n",
-    "curve_initial.get_df(T) / curve_initial.get_df(t)"
+    "df0tT = curve_initial.get_df(T) / curve_initial.get_df(t)\n",
+    "print('DF(0,t,T) = ', df0tT)\n",
+    "print('ZeroRate', -np.log(df0tT) / (T-t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "↑ずれている\n",
+    "時間のグリッドが荒いのが原因と考えられる\n",
+    "\n",
+    "グリッドの切り方に応じてドリフトを調整する必要がある"
    ]
   },
   {
