--- a/model/Vasicek.ipynb
+++ b/model/Vasicek.ipynb
@@ -249,6 +249,173 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pricing Discount Bond Option with Monte Carlo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "option_expiry = 1\n",
+    "bond_maturity = 5\n",
+    "strike = 0.67"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i_expiry = (int)(numgrid * option_expiry / T)\n",
+    "r_on_expiry = paths[:, i_expiry]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bond_prices = []\n",
+    "for r in r_on_expiry:\n",
+    "    curve = model.get_curve(option_expiry, r)\n",
+    "    bond_prices.append(curve.get_df(bond_maturity))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "payoffs = np.maximum(0, np.array(bond_prices) - strike)\n",
+    "price = curve_initial.get_df(option_expiry) * payoffs.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "option price : 0.14205194386903197\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('option price :', price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FRA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = 2\n",
+    "end = 2.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fra(curve):\n",
+    "    return (curve.get_df(start) / curve.get_df(end) - 1) / (end - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fra_initial = fra(curve_initial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i_start = (int)(numgrid * start / T)\n",
+    "r_on_start = paths[:, i_start]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fras = []\n",
+    "for r in r_on_start:\n",
+    "    curve = model.get_curve(start, r)\n",
+    "    fras.append(fra(curve))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fra_mc = np.mean(fras)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "analytic : 0.05044296909829926\n",
+      "monte carlo : 0.05071974577182463\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('analytic :', fra_initial)\n",
+    "print('monte carlo :', fra_mc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
