add delta at non ATM

--- a/model/ReversedFX.ipynb
+++ b/model/ReversedFX.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "2.064019137898846"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -77,7 +77,7 @@
        "0.00019657325122846014"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +106,7 @@
        "0.019657325122846014"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "2.0640191378988315"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -229,12 +229,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "### Premium adjusted delta\n",
-    "USD premium"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -254,21 +253,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " - Domestic currency premium (premium currency = right currency)"
+    "#### USD call JPY put\n",
+    "- Domestic currency premium (premium currency = right currency)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DNS ATM JPY premium: 100.5012520859401\n"
+     ]
+    }
+   ],
    "source": [
-    "atm_dns_right = fwd * math.exp(1/2 * vol**2 * tau)"
+    "atm_dns_right = fwd * math.exp(1/2 * vol**2 * tau)\n",
+    "print('DNS ATM JPY premium:', atm_dns_right)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -289,21 +298,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " - Foreigin currency premium (premium currency = left currency)"
+    " - Foreigin currency premium (premium currency = left currency) \n",
+    " \n",
+    " (*) premium adjustment is needed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DNS ATM USD premium: 99.50124791926824\n"
+     ]
+    }
+   ],
    "source": [
-    "atm_dns_left = fwd * math.exp(-1/2 * vol**2 * tau)"
+    "atm_dns_left = fwd * math.exp(-1/2 * vol**2 * tau)\n",
+    "print('DNS ATM USD premium:', atm_dns_left)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -321,88 +341,106 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### JPY call USD put\n",
+    " - premium currency = right currency"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-0.49750623959634155"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DNS ATM USD premium: 0.01005012520859401\n",
+      "reciprocal : 99.50124791926824\n"
+     ]
     }
    ],
    "source": [
-    "bs.black_delta(fwd, atm_dns_left, vol, tau, False) - bs.black_put(fwd, atm_dns_left, vol, tau) / fwd"
+    "atm_dns_right_r = 1/fwd * math.exp(1/2 * vol**2 * tau)\n",
+    "print('DNS ATM USD premium:', atm_dns_right_r)\n",
+    "print('reciprocal :', 1/atm_dns_right_r)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = 1/fwd * math.exp(1/2 * vol**2 * tau)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-0.49999999999999956"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "straddle delta : 8.881784197001252e-16\n"
+     ]
     }
    ],
    "source": [
-    "bs.black_delta(1/fwd, s, vol, tau, False)"
+    "call_delta_right_r = bs.black_delta(1/fwd, atm_dns_right_r, vol, tau, True)\n",
+    "put_delta_right_r = bs.black_delta(1/fwd, atm_dns_right_r, vol, tau, False)\n",
+    "print('straddle delta :', call_delta_right_r + put_delta_right_r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - premium currency = left currency\n",
+    "  \n",
+    " (*) premium adjustment is needed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DNS ATM JPY premium: 0.009950124791926824\n",
+      "reciprocal : 100.5012520859401\n"
+     ]
+    }
+   ],
+   "source": [
+    "atm_dns_left_r = 1/fwd * math.exp(-1/2 * vol**2 * tau)\n",
+    "print('DNS ATM JPY premium:', atm_dns_left_r)\n",
+    "print('reciprocal :', 1/atm_dns_left_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "straddle delta : -6.661338147750939e-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "call_delta_left_r = bs.black_delta(1/fwd, atm_dns_left_r, vol, tau, True) - bs.black_call(1/fwd, atm_dns_left_r, vol, tau) * fwd\n",
+    "put_delta_left_r = bs.black_delta(1/fwd, atm_dns_left_r, vol, tau, False) - bs.black_put(1/fwd, atm_dns_left_r, vol, tau) * fwd\n",
+    "print('straddle delta :', call_delta_left_r + put_delta_left_r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DNS ATM strike coincides if the order of currency pair is reversed"
+   ]
   },
   {
    "cell_type": "code",
@@ -415,107 +453,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reversed currency pair, JPY/USD"
+    "## Delta at strike K = 105"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def inv_bs(fwd, strike, vol, tau):\n",
-    "    return bs.black_put(1/fwd, 1/strike, vol, tau)"
+    "# K = fwd * math.exp(-1/2 * vol**2 * tau)\n",
+    "K =105"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- USD/JPY USD premium\n",
+    "\n",
+    "premium adjustment is needed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.00019657325122846014"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Call delta : 0.3100886013639928\n",
+      "Put delta : -0.7399113986360072\n"
+     ]
     }
    ],
    "source": [
-    "inv_bs(fwd, strike, vol, tau)"
+    "call_delta_k = bs.black_delta(fwd, K, vol, tau, True) - bs.black_call(fwd, K, vol, tau) / fwd\n",
+    "put_delta_k = bs.black_delta(fwd, K, vol, tau, False) - bs.black_put(fwd, K, vol, tau) / fwd\n",
+    "print('Call delta :', call_delta_k)\n",
+    "print('Put delta :', put_delta_k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- JPY/USD USD premium\n",
+    "\n",
+    "no adjustment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Call delta : 0.7046775225104822\n",
+      "Put delta : -0.2953224774895178\n"
+     ]
+    }
+   ],
+   "source": [
+    "call_delta_k_r = bs.black_delta(1/fwd, 1/K, vol, tau, True)\n",
+    "put_delta_k_r = bs.black_delta(1/fwd, 1/K, vol, tau, False)\n",
+    "print('Call delta :', call_delta_k_r)\n",
+    "print('Put delta :', put_delta_k_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "tmp = (inv_bs(fwd * 1.01, strike, vol, tau) - inv_bs(fwd * 0.99, strike, vol, tau)) / (2 * 0.01 * fwd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.33078263057467006"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "put / strike_r + 1 / (fwd_r * strike_r) * tmp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.9537375161493504e-05"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tmp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-2.953224774895178e-05"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fwd_r**2 * put_delta"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
