--- a/ml/Chapter4.ipynb
+++ b/ml/Chapter4.ipynb
@@ -65,10 +65,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def makeNewOutputs(corr0, clstrs, clstrs2):\n",
+    "    clstrsNew = {}\n",
+    "    for i in clstrs.keys():\n",
+    "        clstrsNew[len(clstrsNew.keys())] = list(clstrs[i])\n",
+    "    for i in clstrs2.keys():\n",
+    "        clstrsNew[len(clstrsNew.keys())] = list(clstrs2[i])\n",
+    "    newIdx = [ j for i in clstrsNew for j in clstrsNew[i]]\n",
+    "    corrNew = corr0.loc[newIdx, newIdx]\n",
+    "    x = ((1 - corr0.fillna(0))/2.)**0.5\n",
+    "    kmeans_labels = np.zeros(len(x.columns))\n",
+    "    for i in clstrsNew.keys():\n",
+    "        idxs = [x.index.get_loc(k) for k in clstrsNew[i]]\n",
+    "        kmeans_labels[idxs] = i\n",
+    "    silhNew = pd.Series(silhouette_samples(x, kmeans.labels),\n",
+    "                       index = x.index)\n",
+    "    return corrNew, clstrsNew, silhNew"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def clusterKMeansTop(corr0, maxNumClusters = None, n_init = 10):\n",
+    "    if maxNumClusters == None:\n",
+    "        maxNumClusters = corr0.shape[1]-1\n",
+    "    corr1, clstrs, silh = clusterKMeansBase(corr0, maxNumClusters = min(maxNumClusters, corr0.shape[1]-1), n_init=n_init)\n",
+    "    clusterTstats = {i:np.mean(silh[clstrs[i]]) / np.std(silh[clstrs[i]]) for i in clstrs.keys()}\n",
+    "    tStatMean = sum(clusterTstat.values()) / len(clusterTstat)\n",
+    "    redoClusters = [ i for i in clusterTstats.keys() if clusterTstat[i] < tStatMean]\n",
+    "    if len(redoClusters) <= 1:\n",
+    "        return corr1, clstrs, silh\n",
+    "    else:\n",
+    "        keysRedo = [j for i in redoClusters for j in clstrs[i]]\n",
+    "        corrTmp = corr0.loc[keysRedo, keysRedo]\n",
+    "        tStatMean = np.mean([clusterTstats[i] for i in redoClusters])\n",
+    "        corr2, clstrs2, silh2 = clusterKMeansTop(corrTmp, maxNumClusters=min(maxNumClusters, corrTmp.shape[1]-1, n_init=n_init))\n",
+    "        corrNew, clstrsNew, silhNew = makeNewOutputs(corr0, \n",
+    "                                                     {i:clstrs[i] for i in clstrs.keys() if i not in redoClusters},\n",
+    "                                                     clstrs2)\n",
+    "        newTstatMean = np.mean([np.mean(silhNew[clstrsNew[i]])/\n",
+    "                               np.std(silhNew[clstrsNew[i]]) for i in clstrsNew.keys()])\n",
+    "        if newTstatMean <= tStatMean\n",
+    "    \n",
+    "                                   "
+   ]
   }
  ],
  "metadata": {
