--- a/ml/Chapter4.ipynb
+++ b/ml/Chapter4.ipynb
@@ -2,23 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/yuseki/.pyenv/versions/3.6.4/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import silhouette_samples"
+    "from sklearn.metrics import silhouette_samples\n",
+    "from scipy.linalg import block_diag\n",
+    "from sklearn.utils import check_random_state"
    ]
   },
   {
@@ -89,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,10 +105,66 @@
     "                                                     clstrs2)\n",
     "        newTstatMean = np.mean([np.mean(silhNew[clstrsNew[i]])/\n",
     "                               np.std(silhNew[clstrsNew[i]]) for i in clstrsNew.keys()])\n",
-    "        if newTstatMean <= tStatMean\n",
+    "        if newTstatMean <= tStatMean:\n",
+    "            return corr1, clstrs, silh\n",
+    "        else:\n",
+    "            return corrNew, clstrsNew, silhNew\n",
     "    \n",
     "                                   "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SNIPPET 4.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getCovSub(nObs, nCols, sigma, random_state = None):\n",
+    "    rng = check_random_state(random_state)\n",
+    "    if nCols == 1:\n",
+    "        return np.ones((1,1))\n",
+    "    ar0 = rng.normal(size = (nObs, 1))\n",
+    "    ar0 = np.repeat(ar0, nCols, axis = 1)\n",
+    "    ar0 += rng.normal(scale = sigma, size = ar0.shape)\n",
+    "    ar0 = np.cov(ar0, rowvar=False)\n",
+    "    return ar0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getRndBlockCov(nCols, nBlocks, minBlockSize = 1, sigma = 1., random_state = None):\n",
+    "    rng = check_random_state(rnadom_state)\n",
+    "    parts = rng.choice(range(1, nCols - (minBlockSize-1)*nBlocks), nBlocks-1, replace = False)\n",
+    "    parts.sort()\n",
+    "    parts = np.append(parts, nCols - (minBlockSize - 1) * nBlocks)\n",
+    "    parts = np.append(parts[0], np.diff(parts)) - 1 + minBlockSize\n",
+    "    cov = None\n",
+    "    for nCols_ in parts:\n",
+    "        cov_ = getCovSub(int(max(nCols_ * (nCols_ + 1) / 2., 100)), nCols_, sigma, random_state=rng)\n",
+    "        if cov is None:\n",
+    "            cov = cov_.copy()\n",
+    "        else:\n",
+    "            cov = block_diag(cov, cov_)    \n",
+    "    return cov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
